# Zhuwen-CS-Labs-2025

RK1/: RK1.py
RK2/: rk1_refactored.py  run_tests.py  test_rk1.py
lab1/: lab1.py
lab1/MathLib/: a.out  mymath.cpp  mymath.h  test  test.cpp
lab1/project1/: CMakeLists.txt  main.cpp
lab2/: main.py  test.py  wget-log
lab2/filmoteka/: CMakeLists.txt  filmoteka.cpp  filmoteka.h  films.txt
lab2/lab_python_oop/: circle.py  color.py  figure.py  rectagle.py  square.py
lab2/planet/: CMakeLists.txt  planet.cpp  planet.h  planets.txt
lab2/project2/: CMakeLists.txt  main.cpp
lab3/: data.json
lab3/fraction/: fraction.cpp  fraction.h
lab3/project3/: CMakeLists.txt  main.cpp
lab4/: main.py  test_bdd.py  test_simple.py
lab4/project4/: CMakeLists.txt  main.cpp
lab4/stack/: CMakeLists.txt  mystack.cpp  mystack.h
lab5/myvector/: CMakeLists.txt  MySet.h  MyVector.h
lab5/project5/: CMakeLists.txt  main.cpp
lab6/: CMakeLists.txt  Main.cpp
lab6/Polynomial/: CMakeLists.txt  Polynomial.cpp  Polynomial.h  Term.cpp  Term.h
lab7/: CMakeLists.txt  Handler.cpp  Handler.h  Main.cpp
lab7/Persons/: CMakeLists.txt  Employee.cpp  Employee.h  Engineer.cpp  Engineer.h  Person.cpp  Person.h  Worker.cpp  Worker.h
lab7/Stack/: CMakeLists.txt  Stack.h
lab8/: CMakeLists.txt  Handler.cpp  Handler.h  Main.cpp
lab8/Tasks/: Box.cpp  Box.h  CMakeLists.txt  Inventory.cpp  Inventory.h  Task.cpp  Task.h  Tasks.cpp  Tasks.h
