cmake_minimum_required(VERSION 3.20)
set(project "lab_7")
project(${project})

set(SOURCES
    ${CMAKE_CURRENT_SOURCE_DIR}/Main.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Handler.cpp
)

set(HEADERS
    ${CMAKE_CURRENT_SOURCE_DIR}/Handler.h
)

add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/Stack)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/Persons)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(${project} ${SOURCES} ${HEADERS})
target_compile_options(${project} PRIVATE -Wall -Wextra -Werror -Wpedantic)

if(ENABLE_DEBUG)
    target_compile_options(${project} PRIVATE -g)
endif()

add_custom_target(
    clang-format
    COMMAND clang-format --dry-run -Werror ${SOURCES} ${HEADERS}
)

target_link_libraries(${project} Stack)
target_link_libraries(${project} Persons)
